#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSQt
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-13
2015-03-23 Mikhail S. Dubrovin
- Add modules WdgColorBar, WdgRadHist, WdgSpecHist, 
- add multiple protections - the 1st stable version with all basic features (PSAS-11)
	
2015-03-11 Mikhail S. Dubrovin
- in GeoImage, WdgImage, ImageProc, GUIMain, GUIImageViewer signals and slots slots transfer ndarray w/o const
- GUIMain - clean-up code
- GUILogger - add showframe parameter
	
2015-03-10 Mikhail S. Dubrovin
- Multiple changes in modules:
M       app/geo.cpp - add input parameter parsing
M       app/test_QGraphicsView.cpp - remove unused includes
M       GUIImageViewer - add buttons to open/close colors, radial histogram, spectral windows
M       GeoImage - some improvement in transfer of the raw image ndarray as a reference
M       DragCenter - add signal centerIsChanged(const QPointF&), forceToEmitSignal() and testing methods.
M       WdgImage - add slot onHueAnglesUpdated(const float&, const float&), some reservation for intensity range pars.
M       WdgColorTable - add button "Apply" and emit hueAnglesUpdated(const float&, const float&) ;
M       QGUtils - add parameter/auto-range in getUint32NormalizedImage
M       GUIMain - add button to open/close Image, add/change connections between signals and slots
M       Frame - add void setBoarderVisible(const bool isVisible) 
A       ImageProc - add class for image processing at zoom time, accumulation of spectrum and radial histogram
M       LabColorRing - add/change emitting signals
M       WdgPointPos - show/not-show frame boarder

Tag: V00-00-12
2015-03-02 Mikhail S. Dubrovin