@@ -46,7 +46,7 @@ WdgRadHist::WdgRadHist(QWidget *parent)
 
   this -> setLayout(m_vbox);
   this->setContentsMargins(-9,-9,-9,-9);
-  this->setWindowTitle(_name_());
+  this->setWindowTitle("Radial Histogram");
 }
 
 //--------------------------
